--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -13,6 +13,7 @@ login.username = &#x0406;&#x043C;'&#x044F; &#x043A;&#x043E;&#x0440;&#x0438;&#x04
 login.password = &#x041F;&#x0430;&#x0440;&#x043E;&#x043B;&#x044C;
 login.login = &#x0410;&#x0432;&#x0442;&#x043E;&#x0440;&#x0438;&#x0437;&#x0443;&#x0432;&#x0430;&#x0442;&#x0438;&#x0441;&#x044C;
 
+list_food.all_categories = &#x0412;&#x0441;&#x0456; &#x043A;&#x0430;&#x0442;&#x0435;&#x0433;&#x043E;&#x0440;&#x0456;&#x0457;
 list_food.image         =&#x0424;&#x043E;&#x0442;&#x043E;
 list_food.name          =&#x041D;&#x0430;&#x0437;&#x0432;&#x0430;
 list_food.price         =&#x0426;&#x0456;&#x043D;&#x0430;
