--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,6 +8,7 @@ header.language      =Language
 header.ukrainian     =Ukrainian
 header.english     =English
 
+list_food.all_categories = All Categories
 list_food.image         =Image
 list_food.name          =Name
 list_food.price         =Price
