add spring authorization

--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -1,71 +1,71 @@
 
-header.my_orders= &#x041C;&#x043E;&#x0457; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F;
-header.cart           =&#x041A;&#x043E;&#x0448;&#x0438;&#x043A;
-header.menu           =&#x041C;&#x0435;&#x043D;&#x044E;
-header.registration   =&#x0420;&#x0435;&#x0454;&#x0441;&#x0442;&#x0440;&#x0430;&#x0446;&#x0456;&#x044F;
-header.login           =&#x0410;&#x0432;&#x0442;&#x043E;&#x0440;&#x0438;&#x0437;&#x0430;&#x0446;&#x0456;&#x044F;
-header.logout           =&#x0412;&#x0438;&#x0439;&#x0442;&#x0438;
-header.language     =&#x041C;&#x043E;&#x0432;&#x0430;
-header.ukrainian     =&#x0423;&#x043A;&#x0440;&#x0430;&#x0457;&#x043D;&#x0441;&#x044C;&#x043A;&#x0430;
-header.english     =&#x0410;&#x043D;&#x0433;&#x043B;&#x0456;&#x0439;&#x0441;&#x044C;&#x043A;&#x0430;
+header.my_orders=Мої замовлення
+header.cart           =Кошик
+header.menu           =Меню
+header.registration   =Реєстрація
+header.login           =Авторизація
+header.logout           =Вийти
+header.language     =Мова
+header.ukrainian     =Українська
+header.english     =Англійська
 
-login.username = &#x0406;&#x043C;'&#x044F; &#x043A;&#x043E;&#x0440;&#x0438;&#x0441;&#x0442;&#x0443;&#x0432;&#x0430;&#x0447;&#x0430;
-login.password = &#x041F;&#x0430;&#x0440;&#x043E;&#x043B;&#x044C;
-login.login = &#x0410;&#x0432;&#x0442;&#x043E;&#x0440;&#x0438;&#x0437;&#x0443;&#x0432;&#x0430;&#x0442;&#x0438;&#x0441;&#x044C;
+login.username =Ім'я користувача
+login.password =Пароль
+login.login =Авторизуватись
 
-list_food.all_categories = &#x0412;&#x0441;&#x0456; &#x043A;&#x0430;&#x0442;&#x0435;&#x0433;&#x043E;&#x0440;&#x0456;&#x0457;
-list_food.image         =&#x0424;&#x043E;&#x0442;&#x043E;
-list_food.name          =&#x041D;&#x0430;&#x0437;&#x0432;&#x0430;
-list_food.price         =&#x0426;&#x0456;&#x043D;&#x0430;
-list_food.category      =&#x041A;&#x0430;&#x0442;&#x0435;&#x0433;&#x043E;&#x0440;&#x0456;&#x044F;
-list_food.add_to_cart   =&#x0414;&#x043E;&#x0434;&#x0430;&#x0442;&#x0438; &#x0434;&#x043E; &#x043A;&#x043E;&#x0448;&#x0438;&#x043A;&#x0430;
-list_food.menu           =&#x041C;&#x0435;&#x043D;&#x044E;
+list_food.all_categories =Всі категорії
+list_food.image         =Фото
+list_food.name          =Назва
+list_food.price         =Ціна
+list_food.category      =Категорія
+list_food.add_to_cart   =Додати до кошика
+list_food.menu           =Меню
 
-cart.image          =&#x0424;&#x043E;&#x0442;&#x043E;
-cart.name           =&#x041D;&#x0430;&#x0437;&#x0432;&#x0430;
-cart.price          =&#x0426;&#x0456;&#x043D;&#x0430;
-cart.quantity       =&#x041A;&#x0456;&#x043B;&#x044C;&#x043A;&#x0456;&#x0441;&#x0442;&#x044C;
-cart.option         =&#x041E;&#x043F;&#x0446;&#x0456;&#x044F;
-cart.sub_total      =&#x041F;&#x0440;&#x043E;&#x043C;&#x0456;&#x0436;&#x043D;&#x0430; &#x0441;&#x0443;&#x043C;&#x0430;
-cart.order          =&#x0417;&#x0430;&#x043C;&#x043E;&#x0432;&#x0438;&#x0442;&#x0438;
-cart.cart           =&#x041A;&#x043E;&#x0448;&#x0438;&#x043A;
-cart.sum            = &#x0414;&#x043E; &#x0441;&#x043F;&#x043B;&#x0430;&#x0442;&#x0438;
-cart.delete            = &#x0412;&#x0438;&#x0434;&#x0430;&#x043B;&#x0438;&#x0442;&#x0438;
+cart.image          =Фото
+cart.name           =Назва
+cart.price          =Ціна
+cart.quantity       =Кількість
+cart.option         =Опція
+cart.sub_total      =Проміжна сума
+cart.order          =Замовити
+cart.cart           =Кошик
+cart.sum            =До сплати
+cart.delete            =Видалити
 
-registration.registration = &#x0420;&#x0435;&#x0454;&#x0441;&#x0442;&#x0440;&#x0430;&#x0446;&#x0456;&#x044F;!
-registration.first_name = &#x0406;&#x043C;'&#x044F;
-registration.last_name = &#x041F;&#x0440;&#x0456;&#x0437;&#x0432;&#x0438;&#x0449;&#x0435;
-registration.username = &#x0406;&#x043C;'&#x044F; &#x0432; &#x0441;&#x0438;&#x0441;&#x0442;&#x0435;&#x043C;&#x0456;
-registration.password = &#x041F;&#x0430;&#x0440;&#x043E;&#x043B;&#x044C;
-registration.email = &#x0415;&#x043B;&#x0435;&#x043A;&#x0442;&#x0440;&#x043E;&#x043D;&#x043D;&#x0430; &#x043F;&#x043E;&#x0448;&#x0442;&#x0430;
-registration.address = &#x0410;&#x0434;&#x0440;&#x0435;&#x0441;&#x0430;
-registration.phone_number = &#x041D;&#x043E;&#x043C;&#x0435;&#x0440; &#x0422;&#x0435;&#x043B;&#x0435;&#x0444;&#x043E;&#x043D;&#x0443;
-registration.submit = &#x0412;&#x0456;&#x0434;&#x043F;&#x0440;&#x0430;&#x0432;&#x0438;&#x0442;&#x0438;
+registration.registration =Реєстрація!
+registration.first_name =Ім'я
+registration.last_name =Прізвище
+registration.username =Ім'я в системі
+registration.password =Пароль
+registration.email =Електронна пошта
+registration.address =Адреса
+registration.phone_number =Номер Телефону
+registration.submit =Відправити
 
-thanks.message.gratitude=&#x041F;&#x043E;&#x0434;&#x044F;&#x043A;&#x0430;
-thanks.your_order_number_is= &#x0412;&#x0430;&#x0448; &#x043D;&#x043E;&#x043C;&#x0435;&#x0440; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F;
-thanks.will_be_delivered = &#x0411;&#x0443;&#x0434;&#x0435; &#x0434;&#x043E;&#x0441;&#x0442;&#x0430;&#x0432;&#x043B;&#x0435;&#x043D;&#x043E; &#x0437;&#x0430; 20 &#x0445;&#x0432;&#x0438;&#x043B;&#x0438;&#x043D;
-thanks.email_us = &#x0417;&#x0432;&#x0435;&#x0440;&#x043D;&#x0456;&#x0442;&#x044C;&#x0441;&#x044F; &#x0434;&#x043E; &#x043D;&#x0430;&#x0441;
-thanks.for_help = &#x0437;&#x0430; &#x0434;&#x043E;&#x043F;&#x043E;&#x043C;&#x043E;&#x0433;&#x043E;&#x044E;
-thanks.message.contact      = &#x0427;&#x0435;&#x0440;&#x0435;&#x0437; 5 &#x0445;&#x0432;&#x0438;&#x043B;&#x0438;&#x043D; &#x0437;  &#x0432;&#x0430;&#x043C;&#x0438; &#x0437;&#x0432;'&#x044F;&#x0436;&#x0435;&#x0442;&#x044C;&#x0441;&#x044F; &#x043D;&#x0430;&#x0448; &#x043E;&#x043F;&#x0435;&#x0440;&#x0430;&#x0442;&#x043E;&#x0440;.
-thanks.message.track           =&#x0412;&#x0438; &#x043C;&#x043E;&#x0436;&#x0435;&#x0442;&#x0435; &#x0432;&#x0456;&#x0434;&#x0441;&#x0442;&#x0435;&#x0436;&#x0443;&#x0432;&#x0430;&#x0442;&#x0438; &#x0432;&#x0430;&#x0448;&#x0435; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F; &#x0443; &#x0432;&#x043A;&#x043B;&#x0430;&#x0434;&#x0446;&#x0456; "&#x041C;&#x043E;&#x0457; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F;".
+thanks.message.gratitude=Подяка
+thanks.your_order_number_is=Ваш номер замовлення
+thanks.will_be_delivered =Буде доставлено за 20 хвилин
+thanks.email_us =Зверніться до нас
+thanks.for_help =за допомогою
+thanks.message.contact      =Через 5 хвилин з  вами зв'яжеться наш оператор.
+thanks.message.track           =Ви можете відстежувати ваше замовлення у вкладці "Мої замовлення".
 
 
-footer.contacts = &#x041A;&#x043E;&#x043D;&#x0442;&#x0430;&#x043A;&#x0442;&#x0438;
-footer.hours_of_working = &#x0413;&#x043E;&#x0434;&#x0438;&#x043D;&#x0438; &#x0440;&#x043E;&#x0431;&#x043E;&#x0442;&#x0438;
-footer.restaurant_name = &#x0420;&#x0435;&#x0441;&#x0442;&#x043E;&#x0440;&#x0430;&#x043D; "&#x041A;&#x0438;&#x0457;&#x0432;"
-footer.address = &#x0432;&#x0443;&#x043B;. &#x041A;&#x043E;&#x0441;&#x0442;&#x044F;&#x043D;&#x0442;&#x0438;&#x043D;&#x0456;&#x0432;&#x0441;&#x044C;&#x043A;&#x0430;, 1
-footer.lounge_bar = &#x041B;&#x0430;&#x0443;&#x043D;&#x0436;-&#x0431;&#x0430;&#x0440;
-footer.mon_fri = &#x041F;&#x043D;-&#x041F;&#x0442;
-footer.sat_sun = &#x0421;&#x0431;-&#x041D;&#x0434;
-footer.delivery = &#x0414;&#x043E;&#x0441;&#x0442;&#x0430;&#x0432;&#x043A;&#x0430;
+footer.contacts =Контакти
+footer.hours_of_working =Години роботи
+footer.restaurant_name =Ресторан "Київ"
+footer.address =вул. Костянтинівська, 1
+footer.lounge_bar =Лаунж-бар
+footer.mon_fri =Пн-Пт
+footer.sat_sun =Сб-Нд
+footer.delivery =Доставка
 
-my_orders.my_orders     =&#x041C;&#x043E;&#x0457; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F;
-my_orders.date_of_ordering =&#x0414;&#x0430;&#x0442;&#x0430; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F;
-my_orders.items          =&#x0421;&#x0442;&#x0440;&#x0430;&#x0432;&#x0438;
-my_orders.order_price    =&#x0426;&#x0456;&#x043D;&#x0430; &#x0437;&#x0430;&#x043C;&#x043E;&#x0432;&#x043B;&#x0435;&#x043D;&#x043D;&#x044F;
-my_orders.status         =&#x0421;&#x0442;&#x0430;&#x0442;&#x0443;&#x0441;
-my_orders.name          =&#x041D;&#x0430;&#x0437;&#x0432;&#x0430;
-my_orders.price         =&#x0426;&#x0456;&#x043D;&#x0430;
-my_orders.quantity      =&#x041A;&#x0456;&#x043B;&#x044C;&#x043A;&#x0456;&#x0441;&#x0442;&#x044C;
-my_orders.sub_total     =&#x041F;&#x0440;&#x043E;&#x043C;&#x0456;&#x0436;&#x043D;&#x0430; &#x0446;&#x0456;&#x043D;&#x0430;
+my_orders.my_orders     =Мої замовлення
+my_orders.date_of_ordering =Дата замовлення
+my_orders.items          =Страви
+my_orders.order_price    =Ціна замовлення
+my_orders.status         =Статус
+my_orders.name          =Назва
+my_orders.price         =Ціна
+my_orders.quantity      =Кількість
+my_orders.sub_total     =Проміжна ціна
